tests/sksl/errors/ReservedNamePublic.glsl
### Compilation failed:

error: 1: 'public' is a reserved word
1 error
